apphost to class add prettier and webpack-dev.server

--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config ./config/webpack/webpack.config.js",
+    "start": "webpack-dev-server --hot --open --config ./config/webpack/webpack.config.dev.js",
+    "build": "webpack --config ./config/webpack/webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^13.1.6",
+    "prettier": "^1.19.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
