--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^13.1.6",
     "prettier": "^1.19.1",
     "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
