--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "typescript-starter",
+  "name": "new-relic",
   "version": "1.0.0",
-  "description": "",
+  "description": "new relic technical test",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --hot --open --config ./config/webpack/webpack.config.dev.js",
     "build": "webpack --config ./config/webpack/webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "oscar garcia masia",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^13.1.6",
