--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "new relic technical test",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --hot --open --config ./config/webpack/webpack.config.dev.js",
+    "typecheck": "tsc --pretty --noEmit",
+    "typecheck:watch": "npm run typecheck -- --watch",
+    "start": "npm-run-all --parallel start:dev-server mock-server typecheck:watch",
+    "start:dev-server": "webpack-dev-server --hot --open --config ./config/webpack/webpack.config.dev.js",
+    "mock-server": "json-server ./src/mock/db.json --routes ./src/mock/routes.json --watch ./src/mock/routes.json",
     "build": "webpack --config ./config/webpack/webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +19,8 @@
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@types/node": "^13.1.6",
+    "json-server": "^0.15.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
