--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "start:dev-server": "webpack-dev-server --hot --open --config ./config/webpack/webpack.config.dev.js",
     "mock-server": "json-server ./src/mock/db.json --routes ./src/mock/routes.json --watch ./src/mock/routes.json",
     "build": "webpack --config ./config/webpack/webpack.config.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --config ./config/jest/jest.config.js"
   },
   "author": "oscar garcia masia",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^24.9.0",
     "@types/node": "^13.1.6",
+    "babel-jest": "^24.9.0",
+    "cross-env": "^6.0.3",
+    "jest": "^24.9.0",
     "json-server": "^0.15.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
@@ -26,6 +32,7 @@
     "tslint": "^5.20.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   }
